# travel_recommend

./: .gitignore  .secrets.example.yaml  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
api/: models.py  serializers.py  swagger_responses.py  urls.py  views.py
api/management/commands/: load_districts_locations.py
api/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
data/dynamic/: districts.json
tests/: conftest.py  test_views.py
