[project]
name = "travel_recommend"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Travel Recommendation System to find cool destinations."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"

dependencies = [
    "Django>=5.0.4,<5.1.0",
    "dynaconf>=3.2.5,<3.3.0",
    "requests>=2.32.3,<2.33.0",
    "djangorestframework>=3.15.1,<3.16.0",
]
